--- a/Shippable.yml
+++ b/Shippable.yml
@@ -1,12 +1,12 @@
-    language: java
-    jdk:
-        - oraclejdk8
-    branches:
-        only:
-            -master
-    build:
-        ci:
-            - cd maven-demo
-        on_sucess:
-                    - mvn clean
-                    - mvn test
+--- 
+branches: 
+  only: "-master"
+build: 
+  ci: 
+    - "cd maven-demo"
+  on_sucess: 
+    - "mvn clean"
+    - "mvn test"
+jdk: 
+  - oraclejdk8
+language: java
